--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
-    "mongoose": "^6.11.1"
+    "mongoose": "^6.11.1",
+    "passport": "^0.7.0",
+    "passport-local": "^1.0.0"
   }
 }
