--- a/server/package.json
+++ b/server/package.json
@@ -21,7 +21,6 @@
     "express": "^4.18.2",
     "mongoose": "^6.11.1",
     "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0"
+    "passport-local": "^1.0.0"
   }
 }
