--- a/server/package.json
+++ b/server/package.json
@@ -16,10 +16,10 @@
   "author": "Peripha",
   "license": "ISC",
   "dependencies": {
-    "connect-mongodb-session": "^2.2.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
     "mongoose": "^6.11.1",
     "passport": "^0.7.0",
