--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1", 
+    "start": "nodemon server.js"
   },
   "keywords": [
     "nodejs",
@@ -22,6 +23,7 @@
     "express-async-handler": "^1.2.0",
     "express-session": "^1.18.0",
     "mongoose": "^6.11.1",
+    "nodemon": "^3.1.0",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0"
   }
